# Otus_lesson3

./: main.py  pyproject.toml  requirements.txt  Ссылки.ini
Create_cloud/: Makefile  terraform.tfvars.example
lesson-3-cookiecutter/: README.md
lesson-3-cookiecutter/notebooks/: work.ipynb
lesson-3-cookiecutter/src/: modul_func.py
lesson-3-cookiecutter/tests/: test_main.py
